# datadreamer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: autogenerate_requirements.yaml  core-tests.yaml  gar-publish-dev.yaml  gar-publish.yaml  ghcr-publish-manual.yaml  ghcr-publish.yaml  pre-commit.yaml  publish.yaml  semgrep.yaml  tests.yaml  unit-tests.yaml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
basereduce/dataset_annotation/: __init__.py  image_annotator.py  kosmos2_annotator.py  owlv2_annotator.py  utils.py
basereduce/image_generation/: __init__.py  clip_image_tester.py  generator.py  image_generator.py  sdxl_image_generator.py  sdxl_turbo_image_generator.py
basereduce/pipelines/: generate_dataset_from_scratch.py  generate_detection_dataset.py
basereduce/prompt_generation/: __init__.py  generator.py  lm_prompt_generator.py  prompt_generator.py  simple_prompt_generator.py  synonym_generator.py
configs/: cls_config.yaml  det_config.yaml
datadreamer/: __init__.py
datadreamer/dataset_annotation/: __init__.py  aimv2_annotator.py  clip_annotator.py  cls_annotator.py  fastsam_annotator.py  image_annotator.py  owlv2_annotator.py  sam2_annotator.py  slimsam_annotator.py  utils.py
datadreamer/image_generation/: __init__.py  clip_image_tester.py  image_generator.py  sdxl_image_generator.py  sdxl_lightning_image_generator.py  sdxl_turbo_image_generator.py  shuttle_3_image_generator.py
datadreamer/pipelines/: generate_dataset_from_scratch.py
datadreamer/prompt_generation/: __init__.py  bad_words.py  lm_prompt_generator.py  lm_synonym_generator.py  profanity_filter.py  prompt_generator.py  qwen2_lm_prompt_generator.py  simple_prompt_generator.py  synonym_generator.py  tinyllama_lm_prompt_generator.py  wordnet_synonym_generator.py
datadreamer/utils/: __init__.py  bad_words.py  base_converter.py  coco_converter.py  config.py  convert_dataset.py  convert_dataset_to_yolo.py  dataset_utils.py  ldf_converter.py  ldf_convreter.py  luxonis_dataset_converter.py  merge_raw_datasets.py  nms.py  single_label_cls_converter.py  voc_converter.py  yolo_converter.py
examples/: generate_dataset_and_train_yolo.ipynb  generate_dataset_from_scratch.ipynb  generate_instance_segmentation_dataset_and_train_yolo.ipynb  helmet_detection.ipynb  image_annotation_example.py  image_generation_example.py  measure_batched_prompt_gen_speed.py  prompt_generation_example.py  step_by_step_dataset_generation_pipeline.ipynb  visualize_detection_dataset.py
src/datadreamer/dataset_annotation/: __init__.py  image_annotator.py  kosmos2_annotator.py  owlv2_annotator.py  utils.py
src/datadreamer/image_generation/: __init__.py  clip_image_tester.py  image_generator.py  sdxl_image_generator.py  sdxl_turbo_image_generator.py
src/datadreamer/pipelines/: generate_dataset_from_scratch.py
src/datadreamer/prompt_generation/: __init__.py  lm_prompt_generator.py  prompt_generator.py  simple_prompt_generator.py  synonym_generator.py
src/datadreamer/utils/: convert_dataset_to_yolo.py  nms.py
tests/core_tests/integration/: sample_config.yaml  test_pipeline.py
tests/core_tests/unittests/: test_annotators.py  test_converters.py  test_image_generation.py  test_pipeline_arguments.py  test_prompt_generation.py
tests/heavy_tests/integration/: test_pipeline.py  test_pipeline_heavy.py
tests/heavy_tests/unittests/: test_image_generation.py  test_image_generation_heavy.py  test_prompt_generation.py  test_prompt_generation_heavy.py
tests/integration/: sample_config.yaml  test_pipeline.py
tests/unittests/: test_annotators.py  test_converters.py  test_image_generation.py  test_prompt_generation.py  test_utils.py
tools/: autogenerate_requirements.py
