[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datadreamer"
description = "A library for dataset generation and knowledge extraction from foundation computer vision models."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
maintainers = [{ name = "Luxonis", email = "support@luxonis.com"}]
keywords = ["computer vision", "AI", "machine learning", "generative models"]
dynamic = ["dependencies", "optional-dependencies", "version"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }
version = {attr = "datadreamer.__version__"}

[project.urls]
Homepage = "https://github.com/luxonis/datadreamer"

[project.scripts]
datadreamer = "datadreamer.pipelines.generate_dataset_from_scratch:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
ignore = ["F403", "B028", "B905", "D1"]
select = ["E4", "E7", "E9", "F", "W", "B", "I", "FA"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.docformatter]
black = true

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "basic"
